k8s/traefik/grafana.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.example.com`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
        - name: secure-headers
        - name: ratelimit-default
      services:
        - name: grafana
          port: 80
  tls:
    secretName: wildcard-tls
